# CinnaFramework

./: Dockerfile  README.md  decorators.py  docker-compose.yml  main_api.py  main_console.py  main_discord.py  main_farcaster.py  main_farcaster_reply.py  main_mcp.py  main_research.py  main_telegram.py  main_twitter.py  main_twitter_reply.py  pyproject.toml
