[project]
name = "cinna-agent-framework"
version = "0.1.0"
description = "Cinna Agent Framework"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Async frameworks and APIs
    "aiohttp==3.11.15",
    "asyncio==3.4.3",
    "fastapi==0.115.12",
    "flask==3.1.0",
    "flask[async]==3.1.0",
    "uvicorn==0.34.0",

    # AI, LLM, Agents, Embeddings
    "openai==1.71.0",
    "scikit-learn==1.6.1",
    "tiktoken==0.9.0",
    "smolagents==1.9.2",
    "firecrawl-py==2.8.0",
    "duckduckgo-search==7.4.3",
    "apify-client==1.9.2",

    # Crypto & Web3 Agents
    "boto3==1.37.18",
    "botocore==1.37.18",
    "web3-ethereum-defi==0.28.1",
    "safe-eth-py==6.0.0b42",
    "pydash==8.0.5",
    "tenacity==8.5.0",

    # Integrations / Interfaces
    "py-cord==2.6.1",
    "python-telegram-bot==22.0",
    "tweepy==4.15.0",
    "spaceandtime==1.1.70",

    # Utilities
    "requests==2.32.3",
    "python-dotenv==1.1.0",
    "loguru==0.7.3",
    "prompt-toolkit==3.0.0",
    "psycopg2-binary==2.9.10",
    "pydash==8.0.5",
    "pyyaml==6.0.2",
    "mcp==1.6.0",

    # Dev / Lint / Testing
    "pytest==7.4.3",
    "pre-commit==3.6.0",
    "ruff==0.11.8",
    "typer[all]==0.9.0",
]

[tool.uv]
# Required overrides to ensure compatibility for spaceandtime agent
override-dependencies = [
    "requests==2.32.3",
    "python-dotenv==1.1.0",
]

[tool.uv.sources]
pyethash = { git = "https://github.com/rexdotsh/ethash.git", rev = "master" }  # Fork with Windows support

[tool.ruff]
force-exclude = true
line-length = 120
lint.extend-select = ["I"]
